crates/test-files/fixtures/compile_errors/ctx_undefined_create2.fe
contract Bar:
    pass

contract Foo:
    pub fn baz():
        Bar.create2(0, 0)